# trail-completionist

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/trail_completionist/: __init__.py
tests/: test_init.py
